--- a/lesson_1.html
+++ b/lesson_1.html
@@ -41,7 +41,7 @@
     3. Складывает все нормально, выделяя из строки число, так как подходящий формат для операции +""
     4. Деление числа на пустую строку (объект только для чтения) вызывает бесконечность, минус из формулы
     5. Неподходящий формат для операции +"" получаем NaN
-    6. Выводим значения в консоль (объект)
+    6. Выводим значения в консоль (объект);
     */
 </script>
 
